fix the gap between newest projects and projects

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -4651,7 +4651,7 @@ body:not(.tt-magic-cursor) .tt-ps-nav-arrow:hover {
 }
 @media (max-width: 1024px) {
 	.tt-portfolio-carousel .swiper-slide {
-		height: calc(100vh - 60px);
+		height: calc(100vh - 600px);
 	}
 }
 
